--- a/EraMejorGira/EraMejorGira/index.html
+++ b/EraMejorGira/EraMejorGira/index.html
@@ -100,5 +100,8 @@
         <a href="https://www.instagram.com/bibliotecapublicadepuntarenas/" target="_blank" aria-label="Instagram de SINABI">
             <i class="fab fa-instagram"></i>
         </a>
+        <a href="https://whatsapp.com/channel/0029Vat3oOj9mrGb1ag5kb0D" target="_blank" aria-label="Instagram">
+        <i class="fa-brands fa-whatsapp"></i>
+      </a>
     </div>
 </footer>
