footer linkea bien

--- a/EraMejorGira/EraMejorGira/footer.html
+++ b/EraMejorGira/EraMejorGira/footer.html
@@ -3,9 +3,9 @@
         <img src="img/logoSinabi.jpg" alt="SINABI Logo Footer"> <span>© Biblioteca Pública de Puntarenas</span>
     </div>
     <nav class="footer-nav">
-        <a href="#biblioteca">Biblioteca</a>
+        <a href="index.html">Biblioteca</a>
         <a href="actividades.html">Actividades</a>
-        <a href="#servicios">Servicios</a>
+        <a href="servicios.html">Servicios</a>
     </nav>
     <div class="social-icons">
         <a href="https://www.facebook.com/bppuntarenas.sinabi.mcj.cr/" target="_blank" aria-label="Facebook de SINABI">
