--- a/EraMejorGira/EraMejorGira/actividades.html
+++ b/EraMejorGira/EraMejorGira/actividades.html
@@ -13,8 +13,8 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   />
   <!-- Hoja de estilos local -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="actividades.css" />
+  <link rel="stylesheet" href=".//css/style.css">
+  <link rel="stylesheet" href="./css/actividades.css" />
 </head>
 <body>
   <!-- El header se cargará aquí dinámicamente -->
@@ -53,7 +53,7 @@
   <!-- El footer se cargará aquí dinámicamente -->
 
   <!-- Script de funcionalidades -->
-  <script src="actividadesFunciones.js"></script>
+  <script src="./js/actividadesFunciones.js"></script>
   
   <!-- Script para cargar header y footer -->
   <script>
