--- a/EraMejorGira/EraMejorGira/index.html
+++ b/EraMejorGira/EraMejorGira/index.html
@@ -10,7 +10,7 @@
     <title>Biblioteca Pública de Puntarenas</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href=".//css/style.css">
     <section class="hero">
     <div class="hero-content">
         <h1>Descubre, Aprende y Conecta en tu Biblioteca Pública de Puntarenas.</h1>
