--- a/EraMejorGira/EraMejorGira/header.html
+++ b/EraMejorGira/EraMejorGira/header.html
@@ -9,7 +9,7 @@
         <a href="servicios.html">Servicios</a>
         <a href="https://catalogo.sinabi.go.cr/janium-bin/busqueda_rapida.pl?Id=20250609225627" target="_blank">Catálogo</a>
         <a href="https://www.sinabi.go.cr/Transparencia/" target="_blank">Transparencia</a>
-        <a href="#contacto">Contacto</a>
+        <a href="index.html#contacto">Contacto</a>
     </nav>
 </header>
 
