--- a/Biblioteca_Puntarenas_WEB/EraMejorGira/actividades.html
+++ b/Biblioteca_Puntarenas_WEB/EraMejorGira/actividades.html
@@ -39,15 +39,14 @@
         <button class="modal-close" aria-label="Cerrar modal">&times;</button>
         <h2 id="modalTitle" class="modal-titulo"></h2>
         <div class="modal-section"><h4>Fechas</h4><p id="modalDates"></p></div>
-        <div class="modal-section"><h4>Lugar</h4><p id="modalPlace"></p></div>
+        <div class="modal-section" id="modalPlaceSection"><h4>Lugar</h4><p id="modalPlace"></p></div>
         <div class="modal-section"><h4>Modalidad</h4><p id="modalMode"></p></div>
         <div class="modal-section"><h4>Requisitos</h4><ul id="modalReqs"></ul></div>
         <div class="modal-section"><h4>Grupos</h4><ul id="modalGroups"></ul></div>
-        <div class="modal-section"><h4>Inscripción</h4>
-          <p><a id="modalForm" href="#" target="_blank" class="modal-link">Quiero unirme al curso</a></p>
-        </div>
+        <div class="modal-section"><h4>Inscripción</h4><ul id="modalForms"></ul></div>
       </div>
     </div>
+  </div>
   </main>
 
   <!-- El footer se cargará aquí dinámicamente -->
