--- a/Biblioteca_Puntarenas_WEB/EraMejorGira/header.html
+++ b/Biblioteca_Puntarenas_WEB/EraMejorGira/header.html
@@ -6,10 +6,19 @@
     <nav class="nav-links">
         <a href="index.html">Biblioteca</a>
         <a href="actividades.html">Actividades</a>
-        <a href="servicios.html">Servicios</a>
+        <div class="dropdown">
+            <a href="servicios.html" class="dropbtn">Servicios <i class="dropdown-icon">▼</i></a>
+            <div class="dropdown-content">
+                <a href="servicios.html#prestamo-sala">Préstamo en sala</a>
+                <a href="servicios.html#prestamo-domicilio">Préstamo a domicilio</a>
+                <a href="servicios.html#referencia-virtual">Referencia virtual</a>
+                <a href="servicios.html#archivo-documental">Archivo documental</a>
+                <a href="servicios.html#sala-infantil">Sala infantil</a>
+                <a href="servicios.html#extension-bibliotecaria">Extensión bibliotecaria</a>
+            </div>
+        </div>
         <a href="https://catalogo.sinabi.go.cr/janium-bin/busqueda_avanzada.pl?Id=20250619221730" target="_blank">Catálogo</a>
         <a href="https://www.sinabi.go.cr/Transparencia/" target="_blank">Transparencia</a>
         <a href="index.html#contacto">Contacto</a>
     </nav>
 </header>
-
