--- a/Biblioteca_Puntarenas_WEB/EraMejorGira/footer.html
+++ b/Biblioteca_Puntarenas_WEB/EraMejorGira/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer">
+    <link rel="stylesheet" href=".//css/style.css">
     <div class="left-content">
         <img src="img/logoSinabi.jpg" alt="SINABI Logo Footer"> <span>© Biblioteca Pública de Puntarenas</span>
     </div>
@@ -14,8 +15,14 @@
         <a href="https://www.instagram.com/bibliotecapublicadepuntarenas/" target="_blank" aria-label="Instagram de SINABI">
             <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://whatsapp.com/channel/0029Vat3oOj9mrGb1ag5kb0D" target="_blank" aria-label="WhatsApp">
-            <i class="fa-brands fa-whatsapp"></i>
-        </a>
+        
+        <div class="whatsapp-options">
+            <a href="https://whatsapp.com/channel/0029Vat3oOj9mrGb1ag5kb0D" target="_blank" aria-label="Canal de difusión WhatsApp">
+                <i class="fa-brands fa-whatsapp"></i> <span>Canal de difusión</span>
+            </a>
+            <a href="https://wa.me/50626613748" target="_blank" aria-label="WhatsApp Contacto">
+                <i class="fa-brands fa-whatsapp"></i> <span>+506 2661 3748</span>
+            </a>
+        </div>
     </div>
 </footer>
