--- a/Biblioteca_Puntarenas_WEB/servicios.html
+++ b/Biblioteca_Puntarenas_WEB/servicios.html
@@ -20,7 +20,7 @@
 <body>
 
 <section id="servicios" class="container">
-   <h2 class="text-center mb-5">Nuestros Servicios Bibliotecarios</h2>
+   <h2 style="text-align: center; width: 100%; margin-bottom: 2.5rem;">Nuestros Servicios Bibliotecarios</h2>
 
    <div class="servicios-grid">
        <div id="prestamo-sala" class="servicio-card card p-4" onclick="openModal('modal1')">
