--- a/Biblioteca_Puntarenas_WEB/header.html
+++ b/Biblioteca_Puntarenas_WEB/header.html
@@ -7,8 +7,8 @@
         <a href="index.html">Biblioteca</a>
         <a href="actividades.html">Actividades</a>
         <div class="dropdown">
-            <a href="servicios.html" class="dropbtn">Servicios <i class="dropdown-icon">▼</i></a>
-            <div class="dropdown-content">
+            <a href="javascript:void(0)" class="dropbtn" onclick="toggleDropdown()">Servicios <i class="dropdown-icon">▼</i></a>
+            <div class="dropdown-content" id="servicesDropdown">
                 <a href="servicios.html#prestamo-sala">Préstamo en sala</a>
                 <a href="servicios.html#prestamo-domicilio">Préstamo a domicilio</a>
                 <a href="servicios.html#referencia-virtual">Referencia virtual</a>
@@ -22,3 +22,23 @@
         <a href="index.html#contacto">Contacto</a>
     </nav>
 </header>
+
+<script>
+    function toggleDropdown() {
+        const dropdown = document.getElementById("servicesDropdown");
+        dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
+    }
+
+    // Cerrar el dropdown si se hace clic fuera de él
+    window.onclick = function(event) {
+        if (!event.target.matches('.dropbtn')) {
+            const dropdowns = document.getElementsByClassName("dropdown-content");
+            for (let i = 0; i < dropdowns.length; i++) {
+                const openDropdown = dropdowns[i];
+                if (openDropdown.style.display === "block") {
+                    openDropdown.style.display = "none";
+                }
+            }
+        }
+    }
+</script>
