Arregle lo del catalogo

--- a/Biblioteca_Puntarenas_WEB/header.html
+++ b/Biblioteca_Puntarenas_WEB/header.html
@@ -17,7 +17,7 @@
                 <a href="servicios.html#extension-bibliotecaria">Extensión bibliotecaria</a>
             </div>
         </div>
-        <a href="https://catalogo.sinabi.go.cr/janium-bin/busqueda_avanzada.pl?Id=20250619221730" target="_blank">Catálogo</a>
+        <a href="http://catalogo.sinabi.go.cr/opac" target="_blank">Catálogo</a>
         <a href="https://www.sinabi.go.cr/Transparencia/" target="_blank">Transparencia</a>
         <a href="index.html#contacto">Contacto</a>
     </nav>
